# sparrow-cmake

./: .gitignore  README.MD
debug-demo/: test-1.cscs  test-2.cscs  test.cscs
demo/: fibonacci.sp  hello.sp  sample.sp  test1.sp  test2.sp  test3.sp  test5.sp
release/: spr
src/: CMakeLists.txt  windows.toolchain-64.cmake  windows.toolchain.cmake
src/cli/: CMakeLists.txt  cli.c  cli.h
src/compiler/: CMakeLists.txt  compiler.c  compiler.h  debug.c  debug.h
src/debugServer/: debugserver.c  debugserver.h  tcplistener.c  tcplistener.h
src/gc/: CMakeLists.txt  gc.c  gc.h
src/include/: CMakeLists.txt  common.h  unicodeUtf8.c  utils.c  utils.h
src/object/: CMakeLists.txt  class.c  class.h  header_obj.c  header_obj.h  meta_obj.c  meta_obj.h  obj_fn.c  obj_fn.h  obj_list.c  obj_list.h  obj_map.c  obj_map.h  obj_range.c  obj_range.h  obj_string.c  obj_string.h  obj_thread.c  obj_thread.h
src/parser/: CMakeLists.txt  parser.c  parser.h  token.list
src/vm/: CMakeLists.txt  core.c  core.h  vm.c  vm.h
